[package]
name = "rust_item"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
actix-web = "4.4.1"
futures = "0.3.30"
actix-multipart = "0.6.1"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.10", features = [
    "with-uuid-0_8",
    "with-serde_json-1",
] }
serde_json = "1.0.113"
tokio = "1.36.0"
opencv = { version = "0.88.0", features = ["face"] }
diesel = { version = "2.1.4", features = ["postgres","r2d2"] }
bcrypt="0.15.0"
