[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars="5.1.0"
actix-web="4.5.1"
serde={version = "1.0.196",features = ["derive"]}
actix-files="0.6.5"
walkdir="2.4.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "serde_json"]}
dotenv = "0.15.0"
bcrypt="0.15.0"
actix-cors="0.7.0"
serde_json="1.0.113"